--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="mh-trockenbau"
-      content="MH-Trockenbau ist eine Trockenbau Firma die sich mit alle Arten von Trockenbau beschäftigt."
+      name="hm-trockenbau"
+      content="HM-Trockenbau ist eine Trockenbau Firma die sich mit alle Arten von Trockenbau beschäftigt."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
